# sqlx-issue-repro

./: .env  Cargo.toml  docker-compose.yaml
migrations/: 20231004071457_init.sql
src/: main.rs
