[package]
name = "sqlx-issue-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.2", features = ["postgres", "uuid", "runtime-tokio-native-tls"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
uuid = "1.4.1"
